@@ -15,6 +15,8 @@ compile
 config.log
 config.status
 configure
+debian/changelog
+debian/control
 install-sh
 Makefile
 Makefile.in
