@@ -1,5 +1,0 @@
-x11vnc-auto (1.0.0-1) unstable; urgency=medium
-
-  * Initial release
-
- -- Fred Gleason <fredg@paravelsystems.com>  Thu, 13 May 2021 09:30:00 -0400
